# Binding_tool

./: .gitmodules  Bindings.rs  Cargo.toml  README.md  Xila_graphics.c  Xila_graphics.h
.cargo/: config.toml
src/: Arguments.rs  Functions.rs  Native.rs  WASM.rs  lib.rs  main.rs
src/Native/: Call.rs  mod.rs
src/Shared/: Argument.rs  Cast.rs  Function.rs  Type.rs  mod.rs
src/WASM/: Types.h  mod.rs
